# bhub_challenge

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  entrypoint-dev.sh  entrypoint.sh  env.example  gunicorn.conf.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pull_request.yml  push_main.yml
.run/: Make Migrations.run.xml  Open Remote Terminal.run.xml  Run Deps.run.xml  Run Migrate.run.xml  Run Server.run.xml  Run Tests.run.xml  Stop Dev Containers.run.xml  Stop Docker Containers.run.xml  Stop dev Containers.run.xml
core/: models.py  serializers.py  settings.py  urls.py  views.py
core/helpers/: asyncio.py  convert_keys.py  load_doc.py  load_fixtures.py  validate_tax_id.py
core/helpers/validators/: cell_phone.py  country_code.py  currency_code.py  tax_id.py  zip_code.py
core/services/: sentry.py
core/tests/: test_helpers.py  test_validators.py  test_views.py
core/tools/: auth.py  debug.py  drf.py  openapi.py  serializers.py  throttle.py  uvicorn.py
customers/: admin.py  apps.py  serializers.py  url.py
customers/dao/: customer.py
customers/migrations/: 0001_initial.py  0002_bank_address.py  0003_customeraddress_customeraccount.py  0004_alter_customer_cell_phone.py  0005_alter_customer_blocked_reason.py  0006_alter_customer_declared_income_currency.py  0007_address_deleted_bank_deleted_customer_deleted_and_more.py  0008_alter_customer_options.py  0009_alter_address_options_alter_bank_options_and_more.py  0010_alter_address_zip_code.py  0011_customer_blocked_by.py  0012_remove_bank_valid_country.py  0013_alter_customeraccount_active.py  0014_customeraccount_direct_transfer_id_and_more.py  0015_alter_customer_email.py
customers/models/: address.py  bank.py  customer.py  customer_account.py  customer_address.py
customers/tests/: conftest.py  test_dao.py  test_views.py
customers/tests/factories/: address.py  bank.py  customer.py  customer_account.py  customer_address.py
customers/views/: account.py  address.py  customer.py
docs/: DEVELOP.md  INSTALL.md  PREMISES.md  SECRETS.md  SWAGGER.md  VERSIONING.md
